--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=/react-training/index.html#" />
     <script>
-      const redirectTo = location.pathname.replace('/react-training', '');
-      location.replace('/react-training/index.html#' + redirectTo);
+      // Lấy pathname sau "/react-training"
+      const redirectPath = location.pathname.replace('/react-training', '') + location.search + location.hash;
+      location.replace('/react-training/index.html#' + redirectPath);
     </script>
+    <title>Redirecting...</title>
   </head>
-  <body></body>
+  <body>
+    <p>Redirecting...</p>
+  </body>
 </html>
-
