--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <script>
       // Lấy pathname sau "/react-training"
       const redirectPath = location.pathname.replace('/react-training', '') + location.search + location.hash;
-      location.replace('/react-training/index.html#' + redirectPath);
+      location.replace('/react-training/' + redirectPath);
     </script>
     <title>Redirecting...</title>
   </head>
