--- a/404.html
+++ b/404.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=/react-training/index.html#" />
+    <meta http-equiv="refresh" content="0; url=/react-training/index.html" />
     <script>
-      // Lấy pathname sau "/react-training"
+      // Lấy pathname sau /react-training
       const redirectPath = location.pathname.replace('/react-training', '') + location.search + location.hash;
-      location.replace('/react-training/' + redirectPath);
+      location.replace('/react-training/index.html#' + redirectPath);
     </script>
     <title>Redirecting...</title>
   </head>
